src_old/objects/Datasource__c.object
<CustomObject>
    <description>Data source for import data defintion</description>
    <fields>
        <fullName>ConsumerApexClass__c</fullName>
        <label>Consumer ApexClass</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LockProject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LockProject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StopImport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The data source is not allowed to import if there is any invalid value</inlineHelpText>
        <label>Stop import if there is invalid value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TargetObject__c</fullName>
        <label>Target SObject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Datasource</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Datasource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datasources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>